; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/aosdk/extr_corlett.c_psfTimeToMS.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/aosdk/extr_corlett.c_psfTimeToMS.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @psfTimeToMS(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca [100 x i8], align 16
  store i8* %0, i8** %2, align 8
  store i32 0, i32* %4, align 4
  store i32 0, i32* %5, align 4
  %7 = getelementptr inbounds [100 x i8], [100 x i8]* %6, i64 0, i64 0
  %8 = load i8*, i8** %2, align 8
  %9 = call i32 @strncpy(i8* %7, i8* %8, i32 100)
  %10 = getelementptr inbounds [100 x i8], [100 x i8]* %6, i64 0, i64 99
  store i8 0, i8* %10, align 1
  %11 = getelementptr inbounds [100 x i8], [100 x i8]* %6, i64 0, i64 0
  %12 = call i64 @strlen(i8* %11)
  %13 = trunc i64 %12 to i32
  store i32 %13, i32* %3, align 4
  br label %14

14:                                               ; preds = %135, %1
  %15 = load i32, i32* %3, align 4
  %16 = icmp sge i32 %15, 0
  br i1 %16, label %17, label %138

17:                                               ; preds = %14
  %18 = load i32, i32* %3, align 4
  %19 = sext i32 %18 to i64
  %20 = getelementptr inbounds [100 x i8], [100 x i8]* %6, i64 0, i64 %19
  %21 = load i8, i8* %20, align 1
  %22 = sext i8 %21 to i32
  %23 = icmp eq i32 %22, 46
  br i1 %23, label %31, label %24

24:                                               ; preds = %17
  %25 = load i32, i32* %3, align 4
  %26 = sext i32 %25 to i64
  %27 = getelementptr inbounds [100 x i8], [100 x i8]* %6, i64 0, i64 %26
  %28 = load i8, i8* %27, align 1
  %29 = sext i8 %28 to i32
  %30 = icmp eq i32 %29, 44
  br i1 %30, label %31, label %41

31:                                               ; preds = %24, %17
  %32 = getelementptr inbounds [100 x i8], [100 x i8]* %6, i64 0, i64 0
  %33 = load i32, i32* %3, align 4
  %34 = sext i32 %33 to i64
  %35 = getelementptr inbounds i8, i8* %32, i64 %34
  %36 = getelementptr inbounds i8, i8* %35, i64 1
  %37 = call i32 @atoi(i8* %36)
  store i32 %37, i32* %5, align 4
  %38 = load i32, i32* %3, align 4
  %39 = sext i32 %38 to i64
  %40 = getelementptr inbounds [100 x i8], [100 x i8]* %6, i64 0, i64 %39
  store i8 0, i8* %40, align 1
  br label %134

41:                                               ; preds = %24
  %42 = load i32, i32* %3, align 4
  %43 = sext i32 %42 to i64
  %44 = getelementptr inbounds [100 x i8], [100 x i8]* %6, i64 0, i64 %43
  %45 = load i8, i8* %44, align 1
  %46 = sext i8 %45 to i32
  %47 = icmp eq i32 %46, 58
  br i1 %47, label %48, label %87

48:                                               ; preds = %41
  %49 = load i32, i32* %4, align 4
  %50 = icmp eq i32 %49, 0
  br i1 %50, label %51, label %61

51:                                               ; preds = %48
  %52 = getelementptr inbounds [100 x i8], [100 x i8]* %6, i64 0, i64 0
  %53 = load i32, i32* %3, align 4
  %54 = sext i32 %53 to i64
  %55 = getelementptr inbounds i8, i8* %52, i64 %54
  %56 = getelementptr inbounds i8, i8* %55, i64 1
  %57 = call i32 @atoi(i8* %56)
  %58 = mul nsw i32 %57, 10
  %59 = load i32, i32* %5, align 4
  %60 = add nsw i32 %59, %58
  store i32 %60, i32* %5, align 4
  br label %81

61:                                               ; preds = %48
  %62 = load i32, i32* %4, align 4
  %63 = icmp eq i32 %62, 1
  br i1 %63, label %64, label %80

64:                                               ; preds = %61
  %65 = getelementptr inbounds [100 x i8], [100 x i8]* %6, i64 0, i64 0
  %66 = load i32, i32* %3, align 4
  %67 = sext i32 %66 to i64
  %68 = getelementptr inbounds i8, i8* %65, i64 %67
  %69 = load i32, i32* %3, align 4
  %70 = icmp ne i32 %69, 0
  %71 = zext i1 %70 to i64
  %72 = select i1 %70, i32 1, i32 0
  %73 = sext i32 %72 to i64
  %74 = getelementptr inbounds i8, i8* %68, i64 %73
  %75 = call i32 @atoi(i8* %74)
  %76 = mul nsw i32 %75, 10
  %77 = mul nsw i32 %76, 60
  %78 = load i32, i32* %5, align 4
  %79 = add nsw i32 %78, %77
  store i32 %79, i32* %5, align 4
  br label %80

80:                                               ; preds = %64, %61
  br label %81

81:                                               ; preds = %80, %51
  %82 = load i32, i32* %4, align 4
  %83 = add nsw i32 %82, 1
  store i32 %83, i32* %4, align 4
  %84 = load i32, i32* %3, align 4
  %85 = sext i32 %84 to i64
  %86 = getelementptr inbounds [100 x i8], [100 x i8]* %6, i64 0, i64 %85
  store i8 0, i8* %86, align 1
  br label %133

87:                                               ; preds = %41
  %88 = load i32, i32* %3, align 4
  %89 = icmp eq i32 %88, 0
  br i1 %89, label %90, label %132

90:                                               ; preds = %87
  %91 = load i32, i32* %4, align 4
  %92 = icmp eq i32 %91, 0
  br i1 %92, label %93, label %102

93:                                               ; preds = %90
  %94 = getelementptr inbounds [100 x i8], [100 x i8]* %6, i64 0, i64 0
  %95 = load i32, i32* %3, align 4
  %96 = sext i32 %95 to i64
  %97 = getelementptr inbounds i8, i8* %94, i64 %96
  %98 = call i32 @atoi(i8* %97)
  %99 = mul nsw i32 %98, 10
  %100 = load i32, i32* %5, align 4
  %101 = add nsw i32 %100, %99
  store i32 %101, i32* %5, align 4
  br label %131

102:                                              ; preds = %90
  %103 = load i32, i32* %4, align 4
  %104 = icmp eq i32 %103, 1
  br i1 %104, label %105, label %115

105:                                              ; preds = %102
  %106 = getelementptr inbounds [100 x i8], [100 x i8]* %6, i64 0, i64 0
  %107 = load i32, i32* %3, align 4
  %108 = sext i32 %107 to i64
  %109 = getelementptr inbounds i8, i8* %106, i64 %108
  %110 = call i32 @atoi(i8* %109)
  %111 = mul nsw i32 %110, 10
  %112 = mul nsw i32 %111, 60
  %113 = load i32, i32* %5, align 4
  %114 = add nsw i32 %113, %112
  store i32 %114, i32* %5, align 4
  br label %130

115:                                              ; preds = %102
  %116 = load i32, i32* %4, align 4
  %117 = icmp eq i32 %116, 2
  br i1 %117, label %118, label %129

118:                                              ; preds = %115
  %119 = getelementptr inbounds [100 x i8], [100 x i8]* %6, i64 0, i64 0
  %120 = load i32, i32* %3, align 4
  %121 = sext i32 %120 to i64
  %122 = getelementptr inbounds i8, i8* %119, i64 %121
  %123 = call i32 @atoi(i8* %122)
  %124 = mul nsw i32 %123, 10
  %125 = mul nsw i32 %124, 60
  %126 = mul nsw i32 %125, 60
  %127 = load i32, i32* %5, align 4
  %128 = add nsw i32 %127, %126
  store i32 %128, i32* %5, align 4
  br label %129

129:                                              ; preds = %118, %115
  br label %130

130:                                              ; preds = %129, %105
  br label %131

131:                                              ; preds = %130, %93
  br label %132

132:                                              ; preds = %131, %87
  br label %133

133:                                              ; preds = %132, %81
  br label %134

134:                                              ; preds = %133, %31
  br label %135

135:                                              ; preds = %134
  %136 = load i32, i32* %3, align 4
  %137 = add nsw i32 %136, -1
  store i32 %137, i32* %3, align 4
  br label %14

138:                                              ; preds = %14
  %139 = load i32, i32* %5, align 4
  %140 = mul nsw i32 %139, 100
  store i32 %140, i32* %5, align 4
  %141 = load i32, i32* %5, align 4
  ret i32 %141
}

declare dso_local i32 @strncpy(i8*, i8*, i32) #1

declare dso_local i64 @strlen(i8*) #1

declare dso_local i32 @atoi(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
